Expense Construction is going on

--- a/PointOfSalesSystem/Views/Expenses/Create.cshtml
+++ b/PointOfSalesSystem/Views/Expenses/Create.cshtml
@@ -6,15 +6,15 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ExpenseCreateVM</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.ExpenseQuantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -81,7 +81,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="button" id="addButton" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
     </div>
@@ -90,3 +96,9 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section scripts{
+
+    <script src="~/Scripts/POS/Expense/Expense.js"></script>
+
+}
