--- a/PointOfSalesSystem/Views/Expenses/Create.cshtml
+++ b/PointOfSalesSystem/Views/Expenses/Create.cshtml
@@ -56,10 +56,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ExpenseItemId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Expitem", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ExpenseItemId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ExpenseItemId, "", new { @class = "text-danger" })
+                @Html.DropDownList("ExpItem", new SelectList(Model.ExpenseItems, "Id", "Name"), "Select . . .", new { @class = "form-control" })
+                @Html.ValidationMessage("ExpItem", "", new { @class = "text-danger" })
             </div>
         </div>
 
