--- a/PointOfSalesSystem/Views/Expenses/Create.cshtml
+++ b/PointOfSalesSystem/Views/Expenses/Create.cshtml
@@ -8,54 +8,54 @@
 
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>ExpenseCreateVM</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        @Html.Label("ExpenseItem", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("ExpenseItem", new SelectList(Model.ExpenseItems, "Id", "Name"), "Select . . .", new { @class = "form-control" })
+    <div class="form-horizontal">
+        <h4>ExpenseCreateVM</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+        <div class="form-group">
+            @Html.Label("ExpenseItem", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ExpenseItem", new SelectList(Model.ExpenseItems, "Id", "Name"), "Select . . .", new { @class = "form-control" })
+
+            </div>
         </div>
-    </div>
 
 
-    <div class="form-group">
-        @Html.Label("Quantity", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Editor("Quantity", new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.Label("Quantity", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("Quantity", new { htmlAttributes = new { @class = "form-control" } })
 
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Description", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Editor("Description", new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.Label("Description", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("Description", new { htmlAttributes = new { @class = "form-control" } })
 
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Amount", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Editor("Amount", new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.Label("Amount", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("Amount", new { htmlAttributes = new { @class = "form-control" } })
 
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="button" id="addItem" value="Add" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="button" id="addItem" value="Add" class="btn btn-default" />
+            </div>
         </div>
-    </div>
 
-    <div class="form-group-row panel panel-body">
-        <div class="col-md-7 col-md-offset-1">
+        <div>
+
             <table class="table table-hover table-striped table-bordered table-responsive">
                 <thead>
                     <tr>
@@ -70,62 +70,65 @@
 
 
                 </thead>
-                <tbody id="purchaseDetailsTable"></tbody>
+                <tbody id="ExpenseDetailsTable"></tbody>
 
             </table>
         </div>
 
-      
 
-         
+
+
         <div class="form-group">
-        @Html.LabelFor(model => model.ExpenseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ExpenseDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ExpenseDate, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.ExpenseDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ExpenseDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ExpenseDate, "", new { @class = "text-danger" })
+            </div>
         </div>
+
+
+
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ExpenseTotalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ExpenseTotalAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ExpenseTotalAmount, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+
+        <div class="form-group">
+            @Html.Label("BranchId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("BranchId", new SelectList(Model.Branches, "Id", "Name"), "--Select--", new { @class = "form-control" })
+
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EmployeeInfoId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("EmployeeInfoId", new SelectList(Model.EmployeeInfoes, "Id", "Name"), "--Select--", new { @class = "form-control" })
+
+            </div>
+        </div>
+
+
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-success" />
+            </div>
+        </div>
+
+
+
     </div>
 
-
-
-
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.ExpenseTotalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ExpenseTotalAmount, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ExpenseTotalAmount, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.BranchId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BranchId, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.EmployeeInfoId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.EmployeeInfoId, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EmployeeInfoId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-success" />
-        </div>
-    </div>
-</div>
-</div>
 }
 
 <div>
