--- a/PointOfSalesSystem/Views/Shared/_Layout.cshtml
+++ b/PointOfSalesSystem/Views/Shared/_Layout.cshtml
@@ -251,28 +251,32 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Setup &Aacute; View<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Flot Charts</a>
+                                    @Html.ActionLink("Organization", "create", "Organizations", null, null);
                                 </li>
                                 <li>
-                                    <a href="morris.html">Morris.js Charts</a>
+                                    @Html.ActionLink("Branch", "create", "Branches", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Item Category", "create", "ItemCategory", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Item", "create", "Item", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Employee", "create", "EmployeeInfo", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Expense Category", "create", "ExpenseCategory", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Expense Item", "create", "ExpenseItem", null, null);
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Customer/Supplier", "create", "Party", null, null);
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
