--- a/PointOfSalesSystem/Views/Organizations/Create.cshtml
+++ b/PointOfSalesSystem/Views/Organizations/Create.cshtml
@@ -76,7 +76,7 @@
 
             </tr>
         </thead>
-        <tbody>
+        @*<tbody>
             @{
                 int Sl = 0;
             }
@@ -99,7 +99,7 @@
                 </tr>
             }
 
-        </tbody>
+        </tbody>*@
     </table>
 </div>
 }
