updated home page

--- a/PointOfSalesSystem/Views/Home/Index.cshtml
+++ b/PointOfSalesSystem/Views/Home/Index.cshtml
@@ -3,5 +3,17 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Welcome to Point of Sales Sytem</h2>
+<div class="well">
 
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <h2>Welcome to Point of Sales Sytem</h2>
+        </div>
+        <div class="panel-footer">
+            <h6>Developed by Mehedi, Refat and Polash</h6>
+            <h5>Guided by Shirajul Mamun and Sraban Nadimul Islam Bhuyan</h5>
+        </div>
+
+    </div>
+</div>
